// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Add-v2/lib/components/LineButton render 1`] = `
<div>
  <div
    style={
      Object {
        "borderBottom": "1px dashed #B3C3CA",
      }
    }
  />
  <div
    onClick={[MockFunction]}
    style={
      Object {
        "color": "#3BA064",
      }
    }
  >
    <Memo />
     
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/components/LineButton render variant primary 1`] = `
<div>
  <div
    style={
      Object {
        "borderBottom": "1px dashed #B3C3CA",
      }
    }
  />
  <div
    onClick={[MockFunction]}
    style={
      Object {
        "color": "#DE1B1B",
      }
    }
  >
    <Memo />
     
    <p>
      test
    </p>
  </div>
</div>
`;
